[gd_scene load_steps=7 format=3 uid="uid://6j5jnsgned4s"]

[ext_resource type="Script" uid="uid://d3fow8m2t062" path="res://ui/cargo_progress.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://8d7d8iv3amlr" path="res://ui/hud/cargo_outer.svg" id="2"]
[ext_resource type="AudioStream" uid="uid://c4s4nigv8vjkg" path="res://ships/player/mining_unload.wav" id="3"]
[ext_resource type="Texture2D" uid="uid://fkn27pspvdu6" path="res://ui/hud/cargo_fill.svg" id="4"]

[sub_resource type="Animation" id="3"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArcBottom:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 360.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ArcTop:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 360.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mi2qv"]
_data = {
&"idle": SubResource("3")
}

[node name="CargoProgress" type="ProgressBar"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -592.0
pivot_offset = Vector2(64, 64)
show_percentage = false
script = ExtResource("1")

[node name="ArcTop" type="TextureProgressBar" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(64, 64)
value = 50.0
fill_mode = 8
radial_fill_degrees = 180.0
texture_progress = ExtResource("2")

[node name="ArcBottom" type="TextureProgressBar" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(64, 64)
value = 50.0
fill_mode = 8
radial_initial_angle = 180.0
radial_fill_degrees = 180.0
texture_progress = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mi2qv")
}
autoplay = "idle"

[node name="Fill" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(64, 64)
texture = ExtResource("4")
expand_mode = 1
stretch_mode = 6

[node name="AudioUnload" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 22.0
offset_right = 139.0
offset_bottom = 97.0
fill_mode = 8
